Move into the macros directory before running tests.

--- a/.github/workflows/macros.yml
+++ b/.github/workflows/macros.yml
@@ -16,4 +16,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@nightly
-    - run: cargo test
+    - run: cd macros && cargo test
