--- a/.github/workflows/macros.yml
+++ b/.github/workflows/macros.yml
@@ -9,6 +9,7 @@ permissions:
 
 env:
   CARGO_TERM_COLOR: always
+  working-directory: ./macros
 
 jobs:
   test:
@@ -16,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@nightly
-    - run: cd macros && cargo test
+    - run: cargo test
 
   check:
     runs-on: ubuntu-latest
