--- a/.github/workflows/macros.yml
+++ b/.github/workflows/macros.yml
@@ -30,4 +30,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@nightly
+      with:
+        components: clippy
     - run: cd macros && cargo clippy -- --deny warnings
