--- a/.github/workflows/macros.yml
+++ b/.github/workflows/macros.yml
@@ -33,3 +33,12 @@ jobs:
       with:
         components: clippy
     - run: cd macros && cargo clippy -- --deny warnings
+
+  fmt:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: dtolnay/rust-toolchain@nightly
+      with:
+        components: rustfmt
+    - run: cargo fmt -- --check
