--- a/.github/workflows/macros.yml
+++ b/.github/workflows/macros.yml
@@ -41,4 +41,4 @@ jobs:
     - uses: dtolnay/rust-toolchain@nightly
       with:
         components: rustfmt
-    - run: cargo fmt -- --check
+    - run: cd macros && cargo fmt -- --check
