--- a/.github/workflows/mgba-rom-test.yml
+++ b/.github/workflows/mgba-rom-test.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: dtolnay/rust-toolchain@nightly
     # Build mGBA ROM test
     - run: cd tests/pass
-    - run: curl -LsSf https://github.com/mgba-emu/mgba/archive/refs/tags/0.10.3.tar.gz | tar xz
+    - run: curl -LsSf https://github.com/mgba-emu/mgba/archive/refs/tags/0.10.3.tar.gz | tar xzf mgba
     - run: cd mgba
     - run: mkdir build && cd build
     - run: cmake .. -DUSE_LIBZIP=OFF -DBUILD_ROM_TEST=ON -DUSE_PNG=OFF
