--- a/.github/workflows/mgba-rom-test.yml
+++ b/.github/workflows/mgba-rom-test.yml
@@ -27,7 +27,7 @@ jobs:
     - run: mv mgba/mgba-0.10.3/include/mgba mgba-rom-test
     - run: chmod a+rwx mgba-rom-test
     - run: echo "$GITHUB_WORKSPACE" >> $GITHUB_PATH
-    - run: cd tests/pass && cargo test
+    - run: cd tests/pass && sudo cargo test
     # - uses: felixjones/github-mgba-rom-test@v1
     #   with:
     #     swi-call: 0x27
