--- a/.github/workflows/mgba-rom-test.yml
+++ b/.github/workflows/mgba-rom-test.yml
@@ -27,7 +27,7 @@ jobs:
     # - run: mv mgba/mgba-0.10.3/include/mgba mgba-rom-test
     # - run: chmod -f 777 mgba-rom-test
     # - run: echo "$GITHUB_WORKSPACE" >> $GITHUB_PATH
-    - run: cd tests/pass && rom_path=$(cargo test --no-run | sed '\s*Executable.*\((.*)\))'
+    - run: cd tests/pass && rom_path=$(cargo test --no-run | awk -F"[()]" '$1=="Executable"{print $4;exit;}'
     - uses: felixjones/github-mgba-rom-test@v1
       with:
         swi-call: 0x27
