--- a/.github/workflows/mgba-rom-test.yml
+++ b/.github/workflows/mgba-rom-test.yml
@@ -27,10 +27,11 @@ jobs:
     # - run: mv mgba/mgba-0.10.3/include/mgba mgba-rom-test
     # - run: chmod -f 777 mgba-rom-test
     # - run: echo "$GITHUB_WORKSPACE" >> $GITHUB_PATH
-    - run: cd tests/pass && rom_path=$(cargo test --no-run | awk '$1=="Executable"{print $4;exit;}')
+    - run: cd tests/pass && echo "ROM_PATH=$(cargo test --no-run | awk '$1=="Executable"{print $4;exit;}')" >> $GITHUB_OUTPUT
+      id: rom_path
     - uses: felixjones/github-mgba-rom-test@v1
       with:
         swi-call: 0x27
         read-register: 'r0'
-        rom-path: $rom_path
+        rom-path: ${{ steps.rom_path.outputs.ROM_PATH }}
         success-code: 0  # Pass
