--- a/.github/workflows/mgba-rom-test.yml
+++ b/.github/workflows/mgba-rom-test.yml
@@ -19,16 +19,18 @@ jobs:
       with:
         components: rust-src
     # Build mGBA ROM test
-    - run: sudo apt-get update && sudo apt-get install --no-install-recommends libavcodec-dev libavformat-dev libswresample-dev libavutil-dev libedit-dev libelf-dev libmagickwand-dev libpng-dev libqt5opengl5-dev libsdl2-dev libsqlite3-dev libswscale-dev libzip-dev qtmultimedia5-dev
+    # - run: sudo apt-get update && sudo apt-get install --no-install-recommends libavcodec-dev libavformat-dev libswresample-dev libavutil-dev libedit-dev libelf-dev libmagickwand-dev libpng-dev libqt5opengl5-dev libsdl2-dev libsqlite3-dev libswscale-dev libzip-dev qtmultimedia5-dev
     - run: sudo apt-get install binutils-arm-none-eabi
-    - run: mkdir mgba
-    - run: curl -LsSf https://github.com/mgba-emu/mgba/archive/refs/tags/0.10.3.tar.gz | tar xzf - -C mgba
-    - run: cd mgba/mgba-0.10.3 && mkdir build && cd build && cmake -DUSE_LIBZIP=OFF -DBUILD_ROM_TEST=ON -DUSE_PNG=OFF .. && make
-    - run: mv mgba/mgba-0.10.3/include/mgba mgba-rom-test
-    - run: chmod -f 777 mgba-rom-test
-    - run: echo "$GITHUB_WORKSPACE" >> $GITHUB_PATH
-    - run: cd tests/pass && cargo test
-    # - run: cd tests/pass && echo "ROM_PATH=$(cargo test --no-run | awk '$1=="Executable"{print $4;exit;}')" >> $GITHUB_OUTPUT
+    # - run: mkdir mgba
+    # - run: curl -LsSf https://github.com/mgba-emu/mgba/archive/refs/tags/0.10.3.tar.gz | tar xzf - -C mgba
+    # - run: cd mgba/mgba-0.10.3 && mkdir build && cd build && cmake -DUSE_LIBZIP=OFF -DBUILD_ROM_TEST=ON -DUSE_PNG=OFF .. && make
+    # - run: mv mgba/mgba-0.10.3/include/mgba mgba-rom-test
+    # - run: chmod -f 777 mgba-rom-test
+    # - run: echo "$GITHUB_WORKSPACE" >> $GITHUB_PATH
+    # - run: cd tests/pass && cargo test
+    # - run: cd tests/pass && cargo test --no-run
+    - run: cd tests/pass && echo "ROM_PATH=$(cargo test --no-run | awk '$1=="Executable"{print $4;exit;}')" >> $GITHUB_OUTPUT
+    - run: echo $ROM_PATH
     #   id: rom_path
     # - uses: felixjones/github-mgba-rom-test@v1
     #   with:
