--- a/.github/workflows/mgba-rom-test.yml
+++ b/.github/workflows/mgba-rom-test.yml
@@ -30,7 +30,7 @@ jobs:
     # - run: cd tests/pass && cargo test
     # - run: cd tests/pass && cargo test --no-run
     - run: cd tests/pass && echo "ROM_PATH=$(cargo test --no-run | awk '$1=="Executable"{print $4;exit;}')" >> $GITHUB_OUTPUT
-    - run: echo $ROM_PATH
+    - run: echo "$ROM_PATH"
     #   id: rom_path
     # - uses: felixjones/github-mgba-rom-test@v1
     #   with:
