--- a/.github/workflows/mgba-rom-test.yml
+++ b/.github/workflows/mgba-rom-test.yml
@@ -30,6 +30,7 @@ jobs:
     # - run: cd tests/pass && cargo test
     # - run: cd tests/pass && cargo test --no-run
     - name: Build ROM
+      shell: bash
       id: build_rom
       run: cd tests/pass && echo "ROM_PATH=$(cargo test --no-run | awk '$1=="Executable"{print $4;exit;}')" >> $env:GITHUB_OUTPUT
     - run: echo "$ROM_PATH"
