Just try to get the bare basics of output working.

--- a/.github/workflows/mgba-rom-test.yml
+++ b/.github/workflows/mgba-rom-test.yml
@@ -29,10 +29,11 @@ jobs:
     # - run: echo "$GITHUB_WORKSPACE" >> $GITHUB_PATH
     # - run: cd tests/pass && cargo test
     # - run: cd tests/pass && cargo test --no-run
-    - name: Build ROM
-      shell: bash
+    # - name: Build ROM
+    #   id: build_rom
+    #   run: cd tests/pass && echo "ROM_PATH=$(cargo test --no-run | awk '$1=="Executable"{print $4;exit;}')" >> $env:GITHUB_OUTPUT
+    - run: echo "ROM_PATH=hello" >> GITHUB_OUTPUT
       id: build_rom
-      run: cd tests/pass && echo "ROM_PATH=$(cargo test --no-run | awk '$1=="Executable"{print $4;exit;}')" >> $env:GITHUB_OUTPUT
     - run: echo "$ROM_PATH"
       env:
         ROM_PATH: ${{ steps.build_rom.outputs.ROM_PATH }}
