--- a/.github/workflows/mgba-rom-test.yml
+++ b/.github/workflows/mgba-rom-test.yml
@@ -37,6 +37,13 @@ jobs:
     - run: echo "$ROM_PATH"
       env:
         ROM_PATH: ${{ steps.build_rom.outputs.ROM_PATH }}
+    - name: Set color
+      id: color-selector
+      run: echo "SELECTED_COLOR=green" >> "$GITHUB_OUTPUT"
+    - name: Get color
+      env:
+        SELECTED_COLOR: ${{ steps.color-selector.outputs.SELECTED_COLOR }}
+      run: echo "The selected color is $SELECTED_COLOR"
     #   id: rom_path
     # - uses: felixjones/github-mgba-rom-test@v1
     #   with:
