Set env variable to just output of command.

--- a/.github/workflows/mgba-rom-test.yml
+++ b/.github/workflows/mgba-rom-test.yml
@@ -29,21 +29,14 @@ jobs:
     # - run: echo "$GITHUB_WORKSPACE" >> $GITHUB_PATH
     # - run: cd tests/pass && cargo test
     # - run: cd tests/pass && cargo test --no-run
-    # - name: Build ROM
-    #   id: build_rom
-    #   run: cd tests/pass && echo "ROM_PATH=$(cargo test --no-run | awk '$1=="Executable"{print $4;exit;}')" >> $GITHUB_OUTPUT
-    - run: echo "ROM_PATH=hello" >> $GITHUB_OUTPUT
+    - name: Build ROM
       id: build_rom
+      run: cd tests/pass && echo "ROM_PATH=$(cargo test --no-run)" >> $GITHUB_OUTPUT
+    # - run: echo "ROM_PATH=hello" >> $GITHUB_OUTPUT
+    #   id: build_rom
     - run: echo "$ROM_PATH"
       env:
         ROM_PATH: ${{ steps.build_rom.outputs.ROM_PATH }}
-    - name: Set color
-      id: color-selector
-      run: echo "SELECTED_COLOR=green" >> "$GITHUB_OUTPUT"
-    - name: Get color
-      env:
-        SELECTED_COLOR: ${{ steps.color-selector.outputs.SELECTED_COLOR }}
-      run: echo "The selected color is $SELECTED_COLOR"
     #   id: rom_path
     # - uses: felixjones/github-mgba-rom-test@v1
     #   with:
