--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
+const-str = "0.5.7"
 proc-macro2 = "1.0.56"
 quote = "1.0.26"
 syn = {version = "2.0.15", features = ["full"]}
