--- a/tests/parse_executable/Cargo.toml
+++ b/tests/parse_executable/Cargo.toml
@@ -2,6 +2,7 @@
 name = "parse_executable"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
