--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,9 @@ gba_test_macros = {version = "0.1.0", path = "macros/", optional = true}
 log = "0.4.20"
 mgba_log = "0.2.1"
 
+[dev-dependencies]
+claims = "0.7.1"
+
 [features]
 default = ["macros"]
 macros = ["dep:gba_test_macros"]
