Remove cargo override options when building parse_executable binary.

--- a/.github/workflows/gba_test.yml
+++ b/.github/workflows/gba_test.yml
@@ -1,4 +1,4 @@
-name: Framework
+name: gba_test
 
 on:
   push:
@@ -19,8 +19,8 @@ jobs:
       with:
         components: rust-src
     - run: sudo apt-get install binutils-arm-none-eabi
-    - run: cargo test --no-run --message-format=json | tee results.json
-    - run: echo "ROM_PATH=$(cd tests/parse_executable && cargo run --target x86_64-unknown-linux-gnu -Zbuild-std ../../results.json )" >> $GITHUB_ENV
+    - run: cd gba_test && cargo test --no-run --message-format=json | tee results.json
+    - run: echo "ROM_PATH=$(cd tests/parse_executable && cargo run ../../results.json )" >> $GITHUB_ENV
     - run: arm-none-eabi-objcopy -O binary ${{ env.ROM_PATH }} test.gba
     - run: cargo install gbafix
     - run: gbafix test.gba
