--- a/gba_test/Cargo.toml
+++ b/gba_test/Cargo.toml
@@ -17,7 +17,7 @@ debug = true
 lto = true
 
 [dependencies]
-gba_test_macros = {version = "0.1.0", path = "macros/", optional = true}
+gba_test_macros = {version = "0.1.0", path = "../gba_test_macros/", optional = true}
 log = "0.4.20"
 mgba_log = "0.2.1"
 
