--- a/gba_test/Cargo.toml
+++ b/gba_test/Cargo.toml
@@ -18,11 +18,12 @@ lto = true
 
 [dependencies]
 gba_test_macros = {version = "0.1.0", path = "../gba_test_macros/", optional = true}
-log = "0.4.20"
+log = {version = "0.4.20", optional = true}
 
 [dev-dependencies]
 claims = "0.7.1"
 
 [features]
 default = ["macros"]
+log = ["dep:log"]
 macros = ["dep:gba_test_macros"]
