Use mgba_log as a dev dependency.

--- a/.github/workflows/gba_test.yml
+++ b/.github/workflows/gba_test.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         components: rust-src
     - run: sudo apt-get install binutils-arm-none-eabi
-    - run: cd gba_test && cargo test --no-run --message-format=json | tee results.json
+    - run: cd gba_test && cargo test --features log --no-run --message-format=json | tee results.json
     - run: echo "ROM_PATH=$(cd tests/parse_executable && cargo run ../../gba_test/results.json )" >> $GITHUB_ENV
     - run: arm-none-eabi-objcopy -O binary ${{ env.ROM_PATH }} test.gba
     - run: cargo install gbafix
