--- a/gba_test/Cargo.toml
+++ b/gba_test/Cargo.toml
@@ -22,6 +22,7 @@ log = {version = "0.4.20", optional = true}
 
 [dev-dependencies]
 claims = "0.7.1"
+mgba_log = "0.2.1"
 
 [features]
 default = ["macros"]
