--- a/gba_test_macros/Cargo.toml
+++ b/gba_test_macros/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "gba_test_macros"
 version = "0.1.0"
+authors = ["Anders Evensen"]
 edition = "2021"
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/Anders429/gba_test"
+description = "#[test] attribute for writing tests to be run on the Game Boy Advance."
+categories = ["development-tools::testing", "game-development", "no-std", "no-std::no-alloc"]
+keywords = ["gba", "test", "attribute", "macro", "testing"]
 
 [lib]
 proc-macro = true
