--- a/gba_test/Cargo.toml
+++ b/gba_test/Cargo.toml
@@ -36,3 +36,6 @@ mgba_log = "0.2.1"
 default = ["macros"]
 log = ["dep:log"]
 macros = ["dep:gba_test_macros"]
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ["cfg(doc_cfg)"]}
