--- a/gba_test_macros/Cargo.toml
+++ b/gba_test_macros/Cargo.toml
@@ -16,7 +16,7 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1.0.56"
 quote = "1.0.26"
-syn = {version = "2.0.15", features = ["full"]}
+syn = {version = "2.0.15", features = ["extra-traits", "full"]}
 
 [dev-dependencies]
 trybuild = "1.0.80"
