--- a/.github/workflows/gba_test.yml
+++ b/.github/workflows/gba_test.yml
@@ -40,14 +40,14 @@ jobs:
         components: rust-src
     - run: cd gba_test && cargo check
 
-  # clippy:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - uses: dtolnay/rust-toolchain@nightly
-  #     with:
-  #       components: clippy
-  #   - run: cd gba_test && cargo clippy -- --deny warnings
+  clippy:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: dtolnay/rust-toolchain@nightly
+      with:
+        components: clippy
+    - run: cd gba_test && cargo clippy -- --deny warnings
 
   fmt:
     runs-on: ubuntu-latest
