--- a/tests/should_panic_pass/.cargo/config.toml
+++ b/tests/should_panic_pass/.cargo/config.toml
@@ -6,4 +6,4 @@ runner = "mgba"
 rustflags = ["-Clinker=arm-none-eabi-ld", "-Clink-arg=-Tgba.ld", "-Ztrap-unreachable=no"]
 
 [unstable]
-build-std = ["alloc", "core"]
+build-std = ["core"]
