--- a/.github/workflows/gba_test.yml
+++ b/.github/workflows/gba_test.yml
@@ -46,7 +46,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@nightly
       with:
-        components: clippy
+        components: clippy, rust-src
     - run: cd gba_test && cargo clippy -- --deny warnings
 
   fmt:
