--- a/.github/workflows/gba_test_macros.yml
+++ b/.github/workflows/gba_test_macros.yml
@@ -31,7 +31,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@nightly
       with:
-        components: clippy, rust-src
+        components: clippy
     - run: cd gba_test_macros && cargo clippy -- --deny warnings
 
   fmt:
