--- a/gba_test/Cargo.toml
+++ b/gba_test/Cargo.toml
@@ -38,4 +38,4 @@ log = ["dep:log"]
 macros = ["dep:gba_test_macros"]
 
 [lints.rust]
-unexpected_cfgs = { level = "warn", check-cfg = ["cfg(doc_cfg)"]}
+unexpected_cfgs = { level = "warn", check-cfg = ["cfg(doc_cfg)", "cfg(gba_test_mb)"]}
